[package]
name = "xiv_quote"
version = "0.1.0"
edition = "2021"
authors = ["JustADataConstruct"]
description = "Calls the Final Fantasy XIV API and prints a NPC, Minion or Mount quote."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
directories = "5.0.1"
rand = "0.8.5"
reqwest = {version="0.11.17", default-features=false, features=["json","rustls-tls"]}
serde = {version="1.0.163",features=["derive"]}
serde_json = "1.0.96"
tokio = {version="1.28.1",features=["full"]}

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
